flicker issue resolved

--- a/src/style.css
+++ b/src/style.css
@@ -731,11 +731,12 @@ html {
 }
 
 :root {
-  --var-color:red;
+  --var-color: #FF3399;
 }
 .moflick {
   color: var(--var-color);
-  position: relative;
+  position: absolute;
+  margin-left: 5px;
 }
 .moflick::before {
   position: absolute;
@@ -745,7 +746,7 @@ html {
 }
 @keyframes flicker {
   0% {
-    filter: blur(5px) brightness(1);
+    filter: blur(5px) brightness(3);
   }
   3% {
     filter: blur(5px) brightness(0);
@@ -754,22 +755,22 @@ html {
     filter: blur(5px) brightness(0);
   }
   7% {
-    filter: blur(5px) brightness(1);
+    filter: blur(5px) brightness(2);
   }
   8% {
     filter: blur(5px) brightness(0);
   }
   9% {
-    filter: blur(5px) brightness(1);
+    filter: blur(5px) brightness(2);
   }
   10% {
     filter: blur(5px) brightness(0);
   }
   20% {
-    filter: blur(5px) brightness(1);
+    filter: blur(5px) brightness(2);
   }
   50% {
-    filter: blur(5px) brightness(1);
+    filter: blur(5px) brightness(2);
   }
   99% {
     filter: blur(5px) brightness(0);
